Remove deprecated VM option